apps/agentgateway/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-envoy-gateways
  namespace: agentgateway-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: agentgateway-proxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "15000"
              protocol: TCP
    - fromCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "443"
              protocol: TCP
